--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vueuse/core": "^4.8.1",
     "axios": "^0.21.1",
+    "firebase": "^8.9.0",
     "pinia": "^2.0.0-alpha.13",
     "vue": "^3.0.0",
     "vue-axios": "^3.2.5",
@@ -18,12 +19,14 @@
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@iconify/json": "^1.1.387",
     "@types/node": "^14.14.37",
     "@vitejs/plugin-vue": "1.2.0",
     "@vue/compiler-sfc": "^3.0.9",
     "typescript": "^4.2.3",
     "vite": "^2.3.8",
     "vite-plugin-components": "^0.12.0",
+    "vite-plugin-icons": "^0.6.5",
     "vite-plugin-pages": "^0.14.8",
     "vite-plugin-pwa": "^0.8.1",
     "vite-plugin-windicss": "^1.2.0",
